Knife tool angle constraint printout is unsynchronized with viewport drawing #92952

Closed
opened 2021-11-09 10:42:34 +01:00 by Jesse Yurkovich · 7 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-05 22:22, hash: a804a11db1
Broken: most likely 3.0 Beta as well
Worked: (newest version of Blender that worked as expected)

Short description of error
It looks like the angle constraint printout in the statusbar is unsynchronized with the actual viewport drawing. It often shows the incorrect angle which makes things difficult when moving slow to get the correct angle.

Exact steps for others to reproduce the error

  • Start with default scene and enter edit mode for Cube
  • Switch to Knife tool (K) and tap (A) twice to enter relative angle snapping
  • Move mouse slowly between the angles and observe the "Angle constraint" printout in the statusbar
  • It is often wrong when initially switching to a new snapping position. Moving the mouse slightly again will get things back working but it often flip-flops between incorrect values.

ex1.png

ex2.png

ex3.png

ex4.png

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-05 22:22, hash: `a804a11db1` Broken: most likely 3.0 Beta as well Worked: (newest version of Blender that worked as expected) **Short description of error** It looks like the angle constraint printout in the statusbar is unsynchronized with the actual viewport drawing. It often shows the incorrect angle which makes things difficult when moving slow to get the correct angle. **Exact steps for others to reproduce the error** - Start with default scene and enter edit mode for Cube - Switch to Knife tool (K) and tap (A) twice to enter relative angle snapping - Move mouse slowly between the angles and observe the "Angle constraint" printout in the statusbar - It is often wrong when initially switching to a new snapping position. Moving the mouse slightly again will get things back working but it often flip-flops between incorrect values. ![ex1.png](https://archive.blender.org/developer/F11773893/ex1.png) ![ex2.png](https://archive.blender.org/developer/F11773895/ex2.png) ![ex3.png](https://archive.blender.org/developer/F11773897/ex3.png) ![ex4.png](https://archive.blender.org/developer/F11773900/ex4.png)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HobbesOS

Added subscriber: @HobbesOS
Member

Thanks for pointing this out. I am quite busy at the moment but would like to try taking a look at this over the weekend. Before then, if anybody is interested to look into this themselves let me know/claim this task.

Thanks for pointing this out. I am quite busy at the moment but would like to try taking a look at this over the weekend. Before then, if anybody is interested to look into this themselves let me know/claim this task.
Cian Jinks self-assigned this 2022-01-05 21:17:37 +01:00

This issue was referenced by 68150b666c

This issue was referenced by 68150b666cbb1507cc866c0d8c5ee230eb016252
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92952
No description provided.