Fix T92952: Knife inconsistent angle printout

Knife could display incorrect snapping angle printout in
header/footer because it was not always updated after angle snapping
calculations.